--- a/index.html
+++ b/index.html
@@ -28,17 +28,23 @@
                   type="text"
                   id="name"
                   placeholder="Nombre producto"
-                  class="form-control"/>
+                  class="form-control"
+                  required />
+                <div class="invalid-feedback">Por favor, ingrese el nombre del producto.</div>
               </div>
               <div class="form-group">
                 <input
                   type="number" id="price" step="0.01" placeholder="precio producto"
-                  class="form-control"/>
+                  class="form-control"
+                  required />
+                <div class="invalid-feedback">Por favor, ingrese el precio del producto.</div>
               </div>
 
               <div class="form-group">
                 <input type="number" id="year" min="1900" step="1" value="2024"
-                  class="form-control"/>
+                  class="form-control"
+                  required />
+                <div class="invalid-feedback">Por favor, ingrese el año del producto.</div>
               </div>
               <input type="submit" value="Save"
                 class="btn btn-primary btn-block"/>
