actualizar index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="card-header">
               <h4>Agregar Producto</h4>
             </div>
-            <form id="product-form" class="card-body" method="post" action="#">
+            <form id="product-form" class="card-body" method="post" action="/productos">
               <div class="form-group">
                 <input
                   type="text"
@@ -46,8 +46,7 @@
                   required />
                 <div class="invalid-feedback">Por favor, ingrese el año del producto.</div>
               </div>
-              <input type="submit" value="Save"
-                class="btn btn-primary btn-block"/>
+              <input type="submit" value="Save" class="btn btn-primary btn-block"></input>
             </form>
           </div>
         </div>
